<resources>
    <string name="app_name">Wedding Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtitle">We\'re Trying the Knot</string>
    <string name="title"><![CDATA[Natasha & Ramesh]]></string>
    <string name="months">08</string>
    <string name="months_txt">MONTHS</string>
    <string name="days">05</string>
    <string name="days_txt">DAYS</string>
    <string name="weeks_txt">WEEKS</string>
    <string name="weeks">02</string>
    <string name="add_new_item_button_text">Add New Item</string>
    <string name="add_new_item_button_text_02">Add Item to Calculator</string>
    <string name="add_new_item_button_back">Back</string>
    <string name="budget_calc_tot_title">Budget</string>
    <string name="budget_calc_tot">LKR 0.00</string>
    <string name="budget_calc_dummy_item">Dummy Item</string>
    <string name="btnPhotoVideoText"><![CDATA[Photography &]]></string>
    <string name="btnPhotoVideoText2">Videography</string>
    <string name="budget_overview_title">Budget Overview</string>
    <string name="comming_soon">Will be available soon…</string>
    <string name="title_hotels">Hotels</string>
    <string name="btnHotelSliderText">Indoor</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="available">Available</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="title_photo_and_video">Photography and Videography</string>
    <string name="btnPhotoVideoSliderText">Photography</string>
    <string name="studio_name">Studio Name</string>
    <string name="contact">Contact Now</string>
    <string name="guestCardTitle">Guests Attending</string>
    <string name="guestCardAmount">0/0</string>
    <string name="todo_list_card_title">ToDo List</string>
    <string name="todolist_card_amount">0/0</string>
    <string name="hotel_card_title">Luxrange Hotel</string>
    <string name="hotel_card_sub">Change Venue</string>
    <string name="support_card_title">Support</string>
    <string name="view">View</string>
    <string name="todolist_card_title_02">Tasks Completed</string>
    <string name="add_new_task_button_text">Add New Task</string>
    <string name="todoCardAmount">0/3</string>
    <string name="servicesicon">servicesIcon</string>
    <string name="dressing">Dressing</string>
    <string name="outfits">Outfits</string>
    <string name="wedding_cards_cake_boxes"><![CDATA[Wedding Cards & Cake Boxes]]></string>
    <string name="marriage_registrar">Marriage Registrar</string>
    <string name="ashtaka_amp_poru"><![CDATA[Ashtaka & Poru]]></string>
    <string name="wedding_cars">Wedding Cars</string>
    <string name="projectors_amp_led_walls"><![CDATA[Projectors & LED Walls]]></string>
    <string name="cakes">Cakes</string>
    <string name="entertainment">Entertainment</string>
    <string name="decoration">Decoration</string>
    <string name="rings_and_jewelleries">Rings and Jewelleries</string>
    <string name="fab">FAB</string>
    <string name="tvNotesAddCardViewTitle">Enter Note Details</string>
    <string name="etNoteTitle">Note Title</string>
    <string name="etNote">Note</string>
    <string name="btnAddNote">Add Note</string>
    <string name="tvTodoAddCardViewTitle">Enter ToDo Details</string>
    <string name="etTodoTitle">Enter Title</string>
    <string name="btnAddTodo">Add ToDo</string>
    <string name="title_dressing">Dressing</string>
</resources>