<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BudgetCalcAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/top_card"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/urbanist_semi_bold"
            android:text="@string/subtitle"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/vesper_libre_medium"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/dark_card">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/months"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_bold"
                        android:text="@string/months"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/months_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/urbanist_regular"
                        android:text="@string/months_txt"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/weeks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/urbanist_bold"
                        android:text="@string/weeks"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weeks_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/urbanist_regular"
                        android:text="@string/weeks_txt"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/urbanist_bold"
                        android:text="@string/days"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/days_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="03dp"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/urbanist_regular"
                        android:text="@string/days_txt"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_100sdp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="Enter Item Details"
                    android:textColor="@color/black_accent"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/txt_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/urbanist_semi_bold"
                    android:hint="Item Name"
                    android:textColor="@color/black_accent"
                    android:textColorHighlight="@color/accent"
                    android:textColorHint="@color/pink_light"
                    android:textColorLink="@color/accent"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txt_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_semi_bold"
                    android:hint="Price LKR"
                    android:inputType="number"
                    android:textColor="@color/black_accent"
                    android:textSize="14sp"
                    android:textColorHint="@color/pink_light"/>

                <Button
                    android:id="@+id/btn_add_item_submit"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/accent"
                    android:fontFamily="@font/urbanist_regular"
                    android:text="@string/add_new_item_button_text_02"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_baseline_add_circle_24"
                    app:iconGravity="end"
                    app:iconSize="40dp"
                    app:iconTint="@color/white" />

                <Button
                    android:id="@+id/btn_add_item_back"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:fontFamily="@font/urbanist_regular"
                    android:text="@string/add_new_item_button_back"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_baseline_arrow_back_24"
                    app:iconGravity="end"
                    app:iconSize="40dp"
                    app:iconTint="@color/white" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>