<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="10dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingBottom="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/urbanist_bold"
                        android:text="@string/tvNotesAddCardViewTitle"
                        android:textColor="@color/black_accent"
                        android:textSize="22sp" />

                    <EditText
                        android:id="@+id/etNoteTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/urbanist_semi_bold"
                        android:hint="@string/etNoteTitle"
                        android:textColor="@color/black_accent"
                        android:textColorHighlight="@color/accent"
                        android:textColorHint="@color/pink_light"
                        android:textColorLink="@color/accent"
                        android:textSize="14sp"
                        android:singleLine="true"/>

                    <EditText
                        android:id="@+id/etNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_semi_bold"
                        android:hint="@string/etNote"
                        android:textColor="@color/black_accent"
                        android:textColorHint="@color/pink_light"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnAddNoteFrag"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@color/accent"
                        android:fontFamily="@font/urbanist_regular"
                        android:text="@string/btnAddNote"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:icon="@drawable/ic_baseline_add_circle_24"
                        app:iconGravity="end"
                        app:iconSize="40dp"
                        app:iconTint="@color/white" />

                    <Button
                        android:id="@+id/btnAddNoteBack"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="15dp"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:fontFamily="@font/urbanist_regular"
                        android:text="@string/add_new_item_button_back"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:icon="@drawable/ic_baseline_arrow_back_24"
                        app:iconGravity="end"
                        app:iconSize="40dp"
                        app:iconTint="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>